Fix Javalin 4 CORS example

--- a/javalin4/pom.xml
+++ b/javalin4/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>javalin-async-example</module>
-        <!--<module>javalin-cors-example</module> checked-->
+        <module>javalin-cors-example</module>
         <module>javalin-email-example</module>
         <module>javalin-heroku-example</module>
         <module>javalin-html-forms-example</module>
