--- a/javalin4/pom.xml
+++ b/javalin4/pom.xml
@@ -17,7 +17,7 @@
         <module>javalin-html-forms-example</module>
         <module>javalin-jetty-sessions-example</module>
         <module>javalin-kotlin-example</module>
-        <!--<module>javalin-openapi-example</module> checked -->
+        <module>javalin-openapi-example</module>
         <module>javalin-prometheus-example</module>
         <module>javalin-realtime-collaboration-example</module>
         <!-- flaky due to Byte buddy version -->
