Fix Javalin 4 testing example

--- a/javalin4/pom.xml
+++ b/javalin4/pom.xml
@@ -20,8 +20,7 @@
         <module>javalin-openapi-example</module>
         <module>javalin-prometheus-example</module>
         <module>javalin-realtime-collaboration-example</module>
-        <!-- flaky due to Byte buddy version -->
-        <!--<module>javalin-testing-example</module>-->
+        <module>javalin-testing-example</module>
         <module>javalin-vuejs-example</module>
         <module>javalin-website-example</module>
         <module>javalin-websocket-example</module>
