--- a/javalin6/javalin-auth-example/pom.xml
+++ b/javalin6/javalin-auth-example/pom.xml
@@ -53,6 +53,14 @@
                     <jvmTarget>11</jvmTarget>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
