--- a/javalin7/javalin-kotlin-example/pom.xml
+++ b/javalin7/javalin-kotlin-example/pom.xml
@@ -4,22 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin.samples.javalin6</groupId>
+    <groupId>io.javalin.samples.javalin7</groupId>
     <artifactId>javalin-kotlin-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Javalin 6 ${project.artifactId}</name>
+    <name>Javalin 7 ${project.artifactId}</name>
 
     <properties>
-        <kotlin.version>1.9.10</kotlin.version>
-        <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
+        <kotlin.version>2.2.20</kotlin.version>
+        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0</version>
+            <version>7.0.0-alpha.4</version>
         </dependency>
     </dependencies>
 
@@ -47,7 +47,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>11</jvmTarget>
+                    <jvmTarget>17</jvmTarget>
                 </configuration>
             </plugin>
         </plugins>
