--- a/javalin7/javalin-async-example/pom.xml
+++ b/javalin7/javalin-async-example/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>io.javalin.community.ssl</groupId>
             <artifactId>ssl-plugin</artifactId>
-            <version>6.0.0-SNAPSHOT</version>
+            <version>6.0.0</version>
         </dependency>
     </dependencies>
 
