--- a/javalin7/javalin-prometheus-example/pom.xml
+++ b/javalin7/javalin-prometheus-example/pom.xml
@@ -4,21 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin.samples.javalin6</groupId>
+    <groupId>io.javalin.samples.javalin7</groupId>
     <artifactId>javalin-prometheus-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Javalin 6 ${project.artifactId}</name>
+    <name>Javalin 7 ${project.artifactId}</name>
 
     <properties>
-        <kotlin.version>1.9.10</kotlin.version>
+        <kotlin.version>2.2.20</kotlin.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0</version>
+            <version>7.0.0-alpha.4</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
@@ -61,16 +61,16 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>11</jvmTarget>
+                    <jvmTarget>17</jvmTarget>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
                 <executions>
                     <!-- Replacing default-compile as it is treated specially by maven -->
